# useragentgen

./: .gitignore  LICENSE  README.md  localtestingguide.md  pyproject.toml  shell.nix
.github/workflows/: publish.yml
tests/: test_generator.py  test_parser.py
useragentgen/: __init__.py  generator.py  parser.py
useragentgen/data/: __init__.py  configs.json  engine.txt  exclusions.txt  mobile_token.txt  os.txt  version.txt
