[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "useragentgen"
version = "1.0"
authors = [
    { name = "Masrkai" },
]
description = "Random User-Agent string generator with embedded browser templates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "http",
    "testing",
    "browser",
    "scraping",
    "user-agent",
    "fake-user-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No third-party runtime deps — stdlib only
dependencies = []

[project.urls]
Homepage = "https://github.com/Masrkai/useragentgen"
Repository = "https://github.com/Masrkai/useragentgen"
Issues = "https://github.com/Masrkai/useragentgen/issues"

# ---------------------------------------------------------------------------
# Hatchling: include data files (.txt templates + configs.json)
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["useragentgen"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "useragentgen/", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
